--- a/FroalaBugs/package.json
+++ b/FroalaBugs/package.json
@@ -11,36 +11,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.6",
-    "@angular/common": "~13.3.6",
-    "@angular/compiler": "~13.3.6",
-    "@angular/core": "~13.3.6",
-    "@angular/forms": "~13.3.6",
-    "@angular/platform-browser": "~13.3.6",
-    "@angular/platform-browser-dynamic": "~13.3.6",
-    "@angular/router": "~13.3.6",
-    "angular-froala-wysiwyg": "^4.0.11",
-    "rxjs": "~7.5.5",
+    "@angular/animations": "^14.2.3",
+    "@angular/common": "^14.2.3",
+    "@angular/compiler": "^14.2.3",
+    "@angular/core": "^14.2.3",
+    "@angular/forms": "^14.2.3",
+    "@angular/platform-browser": "^14.2.3",
+    "@angular/platform-browser-dynamic": "^14.2.3",
+    "@angular/router": "^14.2.3",
+    "angular-froala-wysiwyg": "^4.0.14",
+    "rxjs": "~7.5.7",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.5",
-    "@angular/cli": "~13.3.5",
-    "@angular/compiler-cli": "~13.3.6",
-    "@types/node": "^17.0.31",
-    "@types/jasmine": "~4.0.3",
+    "@angular-devkit/build-angular": "^14.2.3",
+    "@angular/cli": "^14.2.3",
+    "@angular/compiler-cli": "^14.2.3",
+    "@types/node": "^18.7.21",
+    "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.1.1",
+    "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.19",
+    "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.7.0",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
     "typescript": "~4.6.4"
   }
