--- a/FroalaBugs/package.json
+++ b/FroalaBugs/package.json
@@ -11,37 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.3",
-    "@angular/common": "^14.2.3",
-    "@angular/compiler": "^14.2.3",
-    "@angular/core": "^14.2.3",
-    "@angular/forms": "^14.2.3",
-    "@angular/platform-browser": "^14.2.3",
-    "@angular/platform-browser-dynamic": "^14.2.3",
-    "@angular/router": "^14.2.3",
-    "angular-froala-wysiwyg": "^4.0.14",
-    "rxjs": "~7.5.7",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.11.8"
+    "@angular/animations": "14.2.7",
+    "@angular/common": "14.2.7",
+    "@angular/compiler": "14.2.7",
+    "@angular/core": "14.2.7",
+    "@angular/forms": "14.2.7",
+    "@angular/platform-browser": "14.2.7",
+    "@angular/platform-browser-dynamic": "14.2.7",
+    "@angular/router": "14.2.7",
+    "angular-froala-wysiwyg": "4.0.15",
+    "rxjs": "7.5.7",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.3",
-    "@angular/cli": "^14.2.3",
-    "@angular/compiler-cli": "^14.2.3",
-    "@types/node": "^18.7.21",
-    "@types/jasmine": "~4.3.0",
-    "@types/jasminewd2": "~2.0.10",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.4.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~10.9.1",
-    "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "@angular-devkit/build-angular": "14.2.6",
+    "@angular/cli": "14.2.6",
+    "@angular/compiler-cli": "14.2.7",
+    "@types/node": "18.11.4",
+    "@types/jasmine": "4.3.0",
+    "@types/jasminewd2": "2.0.10",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "4.4.0",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.4.1",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
+    "protractor": "7.0.0",
+    "ts-node": "10.9.1",
+    "tslint": "6.1.0",
+    "typescript": "4.8.4"
   }
 }
