--- a/FroalaBugs/angular.json
+++ b/FroalaBugs/angular.json
@@ -25,9 +25,11 @@
             "styles": [
               "src/styles.css",
               "./node_modules/froala-editor/css/froala_editor.pkgd.min.css",
-              "./node_modules/froala-editor/css/froala_style.min.css"
+              "./node_modules/froala-editor/css/froala_style.min.css",
+              "./node_modules/froala-editor/css/themes/gray.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+            ],
             "vendorChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
